Estilização de cores

--- a/ToDoList/index.html
+++ b/ToDoList/index.html
@@ -11,11 +11,7 @@
         <header>
             <div id="divHeader">
                 <h1>To-Do List</h1>
-                <div id="btNav">
-                    <div class="blockBtNav"></div>
-                    <div class="blockBtNav"></div>
-                    <div class="blockBtNav"></div>
-                </div>
+                
                 <nav id="headerNav">
                     <ul>
                         <li></li>
@@ -40,6 +36,7 @@
         </main>
         <footer>
             <div id="divFooter">
+                <p>&copy; 2025 Lenízio Nascimento. Todos os direitos reservados</p>
             </div>
         </footer>
     </div>
