--- a/check_list/index.html
+++ b/check_list/index.html
@@ -13,15 +13,21 @@
         </header>
         <main>
             <div id="divMain">
+                <!-- Section Periodo de Concentração -->
                 <section id="sectionFocus" class="boxSections">
                     <h2>Periodo de concentração</h2>
                     <p>O timer é baseado na tecnica de pomodoro, então será adicionado em 25 e 25 minutos</p>
                     <div id="divTimerFocus">
-                        <div type="number" id="inTimerFocus"></div>
+                        <div type="number" id="inTimerFocus">
+                            <div class="buttonsTimer" id="btLeft"></div>
+                            <div class="buttonsTimer" id="btRight"></div>
+                        </div>
                     </div>
-                    <button>Iniciar Tempo de foco</button>
+                    <button id="btFocus">Iniciar Tempo de foco</button>
                 </section>
+                <!--  -->
                 <section id="sectionGoal" class="boxSections"></section>
+                <!--  -->
                 <section id="sectionTasks" class="boxSections"3></section>
             </div>
         </main>
